--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -332,6 +332,21 @@ footer{
     right: 0;
   }
 }
+
+//-------------------------
+//    コンタクト返信ページ
+//-------------------------
+#thanks{
+  header{
+    margin-bottom: 100px;
+  }
+  section{
+
+  }
+}
+
+
+
 //-------------------------
 //    トップへ戻るボタン
 //-------------------------
